Divide up the origin repository to support the Swift Package Manager
The origin repository is only available on Xcode.
Divide up the origin repository into several packages to support the Swift Package Manager and Linux.
Original repo : Trevi (https://github.com/Yoseob/Trevi)

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,10 @@
 ## OSX generated
 .DS_Store
 
+## Swift Package Manager
+/.build
+/Packages
+
 ## Jetbrain AppCode generated
 .idea/
 
@@ -55,4 +59,3 @@ Carthage/Build
 # https://github.com/fastlane/fastlane/blob/master/docs/Gitignore.md
 fastlane/report.xml
 fastlane/screenshots
-
