--- a/Xcode/Info.plist
+++ b/Xcode/Info.plist
@@ -4,6 +4,8 @@
 <dict>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
+	<key>CFBundleDisplayName</key>
+	<string></string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
@@ -23,7 +25,7 @@
 	<key>LSApplicationCategoryType</key>
 	<string></string>
 	<key>NSHumanReadableCopyright</key>
-	<string>Copyright © 2016 Trevi Foundation. All rights reserved.</string>
+	<string>Copyright © 2016 Trevi Community. All rights reserved.</string>
 	<key>NSPrincipalClass</key>
 	<string></string>
 </dict>
